# ChangeLog for dev-java/javacup
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/javacup/ChangeLog,v 1.23 2010/01/03 20:46:18 fauli Exp $

  03 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  javacup-0.11a_beta20060608.ebuild:
  Transfer Prefix keywords

  14 Jan 2008; Vlastimil Babka <caster@gentoo.org>
  javacup-0.11a_beta20060608.ebuild:
  Remove the now obsolete WANT_SPLIT_ANT variable.

  20 Jun 2007; Petteri Räty <betelgeuse@gentoo.org>
  javacup-0.10k-r1.ebuild:
  Change HOMEPAGE from http://www.cs.princeton.edu/~appel/modern/java/CUP/ to
  http://www2.cs.tum.edu/projects/cup.

  28 Feb 2007; Petteri Räty <betelgeuse@gentoo.org> -javacup-0.10k.ebuild,
  javacup-0.10k-r1.ebuild:
  Marked stable on amd64 (bug #167508).

  28 Feb 2007; Petteri Räty <betelgeuse@gentoo.org>
  javacup-0.10k-r1.ebuild:
  Make the ebuild a little bit more fault tolerant when version bumping it.

  20 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  javacup-0.10k-r1.ebuild:
  stable x86; bug 167508

  20 Feb 2007; Markus Rothe <corsair@gentoo.org> javacup-0.10k-r1.ebuild:
  Stable on ppc64; bug #167508

  19 Feb 2007; nixnut <nixnut@gentoo.org> javacup-0.10k-r1.ebuild:
  Stable on ppc wrt bug 167508

  07 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  javacup-0.10k-r1.ebuild:
  Add ~x86-fbsd keyword.

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> javacup-0.10k.ebuild,
  javacup-0.10k-r1.ebuild:
  Dropping sparc keywords, see #96229

  14 Sep 2006; Joshua Nichols <nichoj@gentoo.org> javacup-0.10k-r1.ebuild:
  Added ~ia64

*javacup-0.10k-r1 (20 Jul 2006)

  20 Jul 2006; Joshua Nichols <nichoj@gentoo.org>
  +javacup-0.10k-r1.ebuild:
  Revision bump to use new Java system.

  09 Dec 2005; Petteri Räty <betelgeuse@gentoo.org> javacup-0.10k.ebuild:
  Removed the installation of the LICENSE file.

  07 Aug 2005; Michael Hanselmann <hansmi@gentoo.org> javacup-0.10k.ebuild:
  Stable on ppc.
