@@ -4,13 +4,13 @@ Hash: SHA1
 DIST java_cup_v10k.tar.gz 190843 RMD160 317c764f8567240439243fd2d40b54fcaed2b96e SHA1 79fda6316d3bbb9fee7dbd28301ca973abf140ff SHA256 7e6dc5be74ae56c7e86e69ad0ad88dae3b2847afa9e73a76635918a6b1eb75cd
 DIST javacup-0.11a_beta20060608.tar.bz2 285727 RMD160 232a13874313242eb8b904267c528ca6111031f8 SHA1 1c5d6b910d8ae5889d98b101151efce857e9da7f SHA256 cb3ad4951d734bd1e5a6ff835018dea26a47564f820ae0a925f9c30f2fb7e1ff
 EBUILD javacup-0.10k-r1.ebuild 955 RMD160 15b85f115b50831e4b3542cee909526f5586539c SHA1 ddfd6d528cf384b74f518686287b4081b5309e15 SHA256 684ea0f04f1b61e4b22750d6060c3c507760e950977390be14cde533876b82a8
-EBUILD javacup-0.11a_beta20060608.ebuild 1678 RMD160 3f0ea2b3cdc3c4b9d4bb17313a6dbf2f36ef0995 SHA1 0c564b00ac4bde6cfa4f35d56ff75aac9570662c SHA256 a52ce8ead3f584c4de930db606d3d48e64da16126bcd73449f97ff71248d2f8a
-MISC ChangeLog 2919 RMD160 0020e5d20d18f3aaefbd73fa81b6bc89f37c028f SHA1 884be5d1d1958dc1a0976c39070f2e383e7a9216 SHA256 d3a06a775cf2c6baddf1d1f475455f39127dac3254398d34c304b5419eb1ba78
+EBUILD javacup-0.11a_beta20060608.ebuild 1763 RMD160 975e499bd0419d6a6ab4ef68a68d50ea45dbca1b SHA1 cb6dea339b970ccc0b8d9dcabcc3831b706b117f SHA256 3eb5b670b0097dd2e3e18a6110b2d32ed3b258aa2589d91e96706646c80967ea
+MISC ChangeLog 3067 RMD160 c63780ea4ada52b533221034abf60c07bfac6157 SHA1 c2a2abe7eab6f3db62919cf3ae9f222cf9d0ebde SHA256 d1800ef67153bae75a85ea83afc35fd1fe8915c96a9e4e0361e70a9d54071ced
 MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAktBAiAACgkQNQqtfCuFneOEXACdGaURytuDaAvsv5FnX66x7YdW
-NeUAnR7FyAd/7XPdhK9Pp5tNQGt0Yl3P
-=YUms
+iEYEARECAAYFAku0r4MACgkQcxLzpIGCsLSqsACeJlubi3qwUXrlJf5jzrKN7eet
+IOIAoJ2RZbfCWntqIRiShlENXtpyMzqy
+=rxeT
 -----END PGP SIGNATURE-----
