@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/javacup
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/javacup/ChangeLog,v 1.23 2010/01/03 20:46:18 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/javacup/ChangeLog,v 1.24 2010/04/01 14:36:25 betelgeuse Exp $
+
+  01 Apr 2010; Petteri Räty <betelgeuse@gentoo.org>
+  javacup-0.11a_beta20060608.ebuild:
+  Require >=sys-apps/findutils-4.4 for bug #214664.
 
   03 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
   javacup-0.11a_beta20060608.ebuild:
